# mini-rust-inference

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: attention.rs  compare_llamacpp.rs  inference.rs  int8_prefill.rs  matmul.rs
docs/: architecture.md
scripts/: benchmark_comparison.sh
src/: config.rs  generate.rs  lib.rs  session.rs
src/attention/: cached.rs  gqa.rs  mask.rs  mod.rs  multihead.rs  sdpa.rs  sliding.rs
src/bench/: metrics.rs  mod.rs
src/cache/: kv_cache.rs  management.rs  mod.rs  paged.rs  position.rs  prompt_cache.rs
src/gguf/: cache.rs  dequant.rs  dtype.rs  error.rs  extract.rs  f16.rs  header.rs  loader.rs  metadata.rs  mmap.rs  mod.rs  quantization.rs  tensor_info.rs
src/gguf/quant/: q8_inference.rs
src/memory/: arena.rs  mod.rs  pool.rs  stats.rs
src/model/: mmap_weights.rs  mod.rs
src/model/llama/: block.rs  config.rs  forward.rs  forward_int8.rs  mod.rs  parallel_prefill.rs  prefill.rs  weights.rs
src/ops/: fusion.rs  matvec.rs  mod.rs  rope.rs  rope_scaled.rs  softmax.rs  softmax_simd.rs
src/ops/activation/: mod.rs  silu.rs  swiglu.rs
src/ops/matmul/: avx2.rs  blocked.rs  int8.rs  int8_avx2.rs  int8_neon.rs  mod.rs  naive.rs  neon_f32.rs  parallel.rs  q4_0.rs  q8_direct.rs
src/ops/norm/: mod.rs  rmsnorm.rs  rmsnorm_simd.rs
src/quant/: calibrate.rs  mod.rs
src/quant/int8/: mod.rs  per_channel.rs  symmetric.rs
src/sampling/: mod.rs
src/simd/: dispatch.rs  f32.rs  mod.rs
src/tensor/: debug.rs  error.rs  io.rs  layout.rs  mod.rs  ops.rs  shape.rs  storage.rs  stride.rs  view.rs
src/tokenizer/: bpe.rs  mod.rs
